# Tesselatior

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  imgui-layout.ini  vcpkg.json
.github/workflows/: unixlike-build.yml  windows-build.yml
models/: bunny2.ply  mrmonkey.glb  sphere2.mtl
models/italy/: italy.mtl
src/: application.cpp  application.h  boot.cpp  boot.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  common.cpp  common.h  cube.cpp  cube.h  dragon.cpp  dragon.h  flower.cpp  flower.h  framebuffer.cpp  framebuffer.h  halfedge.cpp  halfedge.h  light.cpp  light.h  logger.h  main.cpp  marius.cpp  marius.h  material.cpp  material.h  matrix_math.cpp  matrix_math.h  mesh.cpp  mesh.h  model.cpp  model.h  model_importer.cpp  model_importer.h  my_imguiconfig.h  myshaderclass.cpp  myshaderclass.h  object.cpp  (+28 more)
src/mesh/: assimp_importer.cpp  assimp_importer.h  halfedge.cpp  importer.cpp  importer.h  mesh.cpp  mesh.h  model_importer.cpp  model_importer.h  object.h  staticmodel.cpp  subdivmesh.cpp  terrain.cpp  vertex.cpp  vertex.h
src/shaders/: 14.frag  14.vert  cameraLOD.tesc  pass_through.tesc  pass_through.tese  pass_through.vert  pass_through_tri.tesc  phong.frag  phong_tessellation.tese  terrain.tese  tess_evaluation.tese  transformation.vert  vertex.vert
src/subdiv/: catmullclark.cpp  catmullclark.h  loop.cpp  loop.h  sqrt3.cpp  sqrt3.h  subdivision.cpp  subdivision.h
